# sleuth

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  models.md  quickstart.md
docs/integrations/: datadog.md  honeycomb.md  newrelic.md  splunk.md
eval/: test_checkout_fixture.py
examples/checkout-incident/: ground_truth.json  incident.sleuth.json  question.txt
examples/checkout-incident/logs/: api-gateway.log.jsonl  checkout-worker.log.jsonl  payment-gateway.log.jsonl  redis-queue.log.jsonl  vault.log.jsonl
src/rlm_logger/: __init__.py  agent.py  case_file.py  cli.py  redact.py  report.py
src/rlm_logger/ingest/: __init__.py  formats.py
src/rlm_logger/tools/: __init__.py  around.py  schema.py  search.py  top_errors.py  trace.py
src/rlm_logger/ui/: __init__.py  live.py  observer.py  plain.py
src/sleuth/: __init__.py  agent.py  case_file.py  cli.py  lm.py  report.py  schemas.py  store.py
src/sleuth/ingest/: __init__.py  formats.py
src/sleuth/tools/: __init__.py  schema.py  search.py  trace.py
src/sleuth/ui/: __init__.py  live.py  observer.py  plain.py
tests/: test_agent.py  test_ingest.py  test_ingest_formats.py  test_redact.py  test_schemas.py  test_tools.py  test_ui_live.py
viewer/: README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  tsconfig.json
viewer/src/: env.d.ts
viewer/src/components/: ConfidenceDial.astro  EvidencePanel.astro  GroundTruthDiff.astro  StepCard.astro  Trajectory.astro
viewer/src/layouts/: Base.astro
viewer/src/lib/: schemas.ts
viewer/src/pages/: index.astro
viewer/src/styles/: global.css
viewer/tests/: e2e.spec.ts
