[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlm-logger"
version = "0.0.1"
description = "Recursive-LM incident debugger. Git bisect for production logs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "chandu" }]
keywords = ["dspy", "rlm", "logs", "observability", "incident", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "pydantic>=2.6",
    "duckdb>=0.10",
    "typer>=0.12",
    "rich>=13.7",
    "litellm>=1.40",
    "dspy-ai>=2.4",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rlm = "rlm_logger.cli:app"

[project.urls]
Homepage = "https://rlm.sh"
Repository = "https://github.com/chandu/rlm-logger"
Documentation = "https://rlm.sh/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_logger"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
asyncio_mode = "auto"
