[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sleuth-rlm"
version = "0.0.1"
description = "Sleuth: use an RLM to figure out your log files. Git bisect for production incidents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "chandu" }]
keywords = ["dspy", "rlm", "logs", "observability", "incident", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "pydantic>=2.6",
    "duckdb>=0.10",
    "typer>=0.12",
    "rich>=13.7",
    "litellm>=1.40",
    "dspy-ai>=2.4",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
]

[project.scripts]
sleuth = "sleuth.cli:app"

[project.urls]
Homepage = "https://github.com/Exorust/sleuth"
Repository = "https://github.com/Exorust/sleuth"
Documentation = "https://exorust.github.io/sleuth/"

[tool.hatch.build.targets.wheel]
packages = ["src/sleuth"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
asyncio_mode = "auto"
